<resources>
    <string name="app_name">36Ke</string>
    <string name="act_time">活动时间</string>
    <string name="act_type">活动类型</string>
    <string name="project_act">项目动态</string>
    <string name="report">寻求报道</string>
    <string name="apply">申请融资</string>
    <string name="act_apply">氪空间报名</string>
    <string name="index">36氪指数</string>
    <string name="power_project">最具爆发力项目</string>
    <string name="newproject">最新涌现项目</string>
    <string name="name_company">推荐公司</string>
    <string name="sort">智能排序</string>
    <string name="trade">行业</string>
    <string name="bolter">筛选</string>
    <string name="page_view">浏览量</string>
    <string name="raising">融资中</string>
    <string name="raise">已筹集</string>
    <string name="money">融资金额</string>
    <string name="subscribe">已认购</string>
    <string name="subscribe_two">已认购</string>
    <string name="subscribe_three">已认购</string>
    <string name="subscribe_four">已认购</string>
    <string name="exit">查看退出方式</string>
    <string name="lead">领投人</string>
    <string name="brief">用不超过30个字介绍下自己吧...</string>
    <string name="edit">编辑</string>
    <string name="focus">关注的人</string>
    <string name="focus_company">关注的公司</string>
    <string name="fans">粉丝</string>
    <string name="news">最新动态</string>
    <string name="edit_text">你的眼里空空如也</string>
    <string name="phone">输入手机号码:</string>
    <string name="name">输入姓名:</string>
    <string name="psw">输入密码:</string>
    <string name="confirm_psw">请确认密码:</string>
    <string name="registration_confirm">确认注册</string>
    <string name="author">作者</string>
    <string name="summary">摘要</string>
    <string name="titles">标题</string>
    <string name="content">内容</string>
    <string name="news_report">寻求报道</string>
    <string name="search_company">搜索新闻/用户/公司</string>
    <string name="cancel">取消</string>
    <string name="search_news">搜索新闻</string>
    <string name="qq">qq昵称</string>
    <string name="qq_info">您的qq尚未关联36氪账号</string>
    <string name="new_account">关联新账号</string>
    <string name="account">关联已有账号</string>
    <string name="startup_company">创业公司</string>
    <string name="login_psw">密码</string>
    <string name="forget_psw">忘记密码?</string>
    <string name="login">登录</string>
    <string name="brief_mine">简介</string>
    <string name="mine_info">我的消息</string>
    <string name="order">我的订单</string>
    <string name="account_info">账号信息</string>
    <string name="attestation">跟投人认证</string>
    <string name="article">我收藏的文章</string>
    <string name="invest">我投资的公司</string>
    <string name="inversion">我的投资劵</string>
    <string name="understand">了解股权投资</string>
    <string name="call">客服热线</string>
    <string name="mine_order_content">还没有投资任何项目</string>
    <string name="mine_order_content_">一分钟认证,做新锐互联网公司股东</string>
    <string name="mine_attestation">认证跟投人</string>
    <string name="register_content">注册成为36氪用户,即享一站式创业服务</string>
    <string name="register_phone">手机号</string>
    <string name="register">注册</string>
    <string name="agree">注册代表你同意</string>
    <string name="agreement">36氪网络使用协议和隐私条款</string>
    <string name="gift_attestation">认证跟投人</string>
    <string name="titles_college">titles</string>
    <string name="author_college">author</string>
    <string name="time_college">time</string>
    <string name="dis_detail_titles">123</string>
    <string name="dis_detail_one">222</string>
    <string name="dis_detail_place">21</string>
    <string name="dis_type">000</string>
    <string name="dis_find_name">name</string>
    <string name="dis_findattention">关注领域</string>
    <string name="attention_content">123</string>
    <string name="findinvest">投资阶段</string>
    <string name="see_all">查看全部</string>
    <string name="originator">创始人:</string>
    <string name="content_dis">内容</string>
    <string name="initiate">创始人:</string>
    <string name="content_discovery">内容</string>
    <string name="founder">创始人:</string>
    <string name="content_three">内容</string>
    <string name="invest_dis">投资速递</string>
    <string name="understand_invest">快速了解股权投资</string>
    <string name="investing_activities">投资活动</string>
    <string name="line">线上路演</string>
    <string name="a">华佗驾到A轮融资路演直播</string>
    <string name="time">2016年5月26日 19:00</string>
    <string name="find">发现好项目</string>
    <string name="see_day">投资人每天都在看</string>
    <string name="search">寻找投资人</string>
    <string name="overall">顶级机构全面入驻</string>
    <string name="entrepreneurs">我是创业者</string>
    <string name="investors">我是专业投资人</string>
    <string name="phone_login">手机号/用户名</string>
    <string name="lead_all">领投方</string>
    <string name="rais">募资中</string>
    <string name="already">已募资:</string>
    <string name="percent">%</string>
    <string name="offer_to_buy">认购</string>
    <string name="news_title">标题</string>
    <string name="new_author">作者</string>
    <string name="new_time">时间</string>
    <string name="news_type">推广</string>
    <string name="article_news">399篇</string>
    <string name="tote_news">文章总数</string>
    <string name="count_news">1441万</string>
    <string name="page_view_news">总计浏览量</string>
    <string name="essay">文章</string>
    <string name="nickname">用户昵称</string>
    <string name="mine_name">真实姓名</string>
    <string name="bief">简介</string>
    <string name="domain">关注的领域</string>
    <string name="location">所在地</string>
    <string name="binding">绑定其他平台</string>
    <string name="photo">拍照</string>
    <string name="album">相册选取</string>
    <string name="cancel_mine">取消</string>
    <string name="project">还没有投资任何项目</string>
    <string name="like">可以看看喜欢的项目</string>
    <string name="see_all_mine">查看全部项目</string>
    <string name="info">消息推送</string>
    <string name="communicate">可及时和创业者及投资人沟通交流</string>
    <string name="all_day">全天开启</string>
    <string name="daytime">只在白天开启8:00_20:00</string>
    <string name="info_message">系统消息</string>
    <string name="info_one">系统消息</string>
    <string name="info_two">系统消息</string>
    <string name="info_three">系统消息</string>
    <string name="work">工作日:10:00-19:00</string>
    <string name="call_mine">呼叫400-995-3636</string>
    <string name="mine_cancle">取消</string>
    <string name="info_setting">消息设置</string>
    <string name="wi_fi">允许非Wi_Fi网络下播放视频</string>
    <string name="clean">清理缓存</string>
    <string name="about">关于36氪</string>
    <string name="check">检查新版本</string>
    <string name="idea">意见反馈</string>
    <string name="exit_setting">退出登录</string>
    <string name="mine_setting_content">为创业者提供最好的产品和服务</string>
    <string name="version">Version 4.6.0</string>
    <string name="build">Build 16061814</string>
    <string name="copyright">copyright @2016 All right reserved</string>
    <string name="title_mine_setting">标题</string>
    <string name="support">支持作者</string>
    <string name="play">￥打赏</string>
    <string name="gain">获取屏幕亮度</string>
    <string name="size">字体大小</string>
    <string name="middle">中</string>
    <string name="big">大</string>
    <string name="large">超大</string>
    <string name="news_titles">新闻</string>
    <string name="acount_dis">999</string>
    <string name="dis_num">认购人数</string>
    <string name="dis_money">投资金额</string>
    <string name="graduate">36氪研究院</string>
    <string name="recent">近期活动</string>
    <string name="hot">热门项目</string>
    <string name="trends">项目动态</string>
</resources>
