<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dis_activityImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/item_dis_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dis_detail_titles" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_dis_desc"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_dis_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five"
            android:text="@string/dis_detail_one" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/common_icon_location"
            android:layout_toRightOf="@id/item_dis_status"
            android:id="@+id/item_dis_location"/>

        <TextView
            android:id="@+id/item_dis_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five"
            android:layout_toRightOf="@id/item_dis_location"
            android:text="@string/dis_detail_place" />

        <TextView
            android:id="@+id/item_dis_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/five"
            android:text="@string/dis_type" />
    </RelativeLayout>


</LinearLayout>