<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten">

        <ImageView
            android:id="@+id/item_news_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="@dimen/five"/>

        <TextView
            android:id="@+id/item_news_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/item_news_img"
            android:text="@string/news_title"
            android:textSize="@dimen/fifteen" />

        <TextView
            android:id="@+id/item_news_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_news_titles"
            android:layout_toRightOf="@id/item_news_img"
            android:text="@string/new_author"
            android:textSize="@dimen/ten"
            android:layout_margin="@dimen/ten"/>

        <TextView
            android:id="@+id/item_news_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_news_titles"
            android:layout_toRightOf="@id/item_news_author"
            android:text="@string/new_time"
            android:textSize="@dimen/ten"
            android:layout_margin="@dimen/ten"/>

        <TextView
            android:id="@+id/item_news_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/item_news_titles"
            android:text="@string/news_type"
            android:layout_margin="@dimen/ten"/>
    </RelativeLayout>

</LinearLayout>