<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/dis_college_featureImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:layout_margin="@dimen/ten"
        android:id="@+id/dis_college_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titles_college"/>
    <TextView
        android:layout_margin="@dimen/ten"
        android:layout_below="@id/dis_college_titles"
        android:id="@+id/dis_college_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_college"/>
    <TextView
        android:layout_margin="@dimen/ten"
        android:layout_below="@id/dis_college_titles"
        android:layout_toRightOf="@id/dis_college_author"
        android:id="@+id/dis_college_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_college"/>
    </RelativeLayout>

</LinearLayout>